fixed header text alignment problem

--- a/resume2.css
+++ b/resume2.css
@@ -101,7 +101,7 @@ header{
 }
 .top-cap-wrapper{
   background: #fcfbf6;
-  width: 50rem;
+  /* width: 50rem; */
   margin: auto;
 }
 .top-cap {
